@@ -35,6 +35,7 @@
     <category label="31010">
         <setting label="31011"  id="time_offset" type="labelenum" values="-12|-11|-10|-9|-8|-7|-6|-5|-4|-3|-2|-1|0|1|2|3|4|5|6|7|8|9|10|11|12" default="-2"/>
         <setting label="31012" type="bool" id="epgPlay" default="false"/>
+        <setting label="31017" id="rec_name" type="select" lvalues="31018|31019" />
         <setting type="sep"/>
         <setting label="31016" type="bool" id="rec_ready" default="false"/>
         <setting label="31013" type="folder" id="library_dir" source="video" option="writeable"/>
