@@ -1,4 +1,10 @@
 ==================================================
+[B]ZattooHiQ v1.6.7.1 [/B]15.072018 Steffen Rolapp
+==================================================
+- diverse Bugfixes
+- sortiefunktion für Aufnahmen
+
+==================================================
 [B]ZattooHiQ v1.6.5 [/B]24.04.2018 Steffen Rolapp
 ==================================================
 - login auf v2 umgestellt
